--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="welcome-background"></div>
         <!-- Twitter логотип в левом углу -->
         <div class="twitter-welcome-corner">
-            <a href="https://x.com" target="_blank">
+            <a href="https://x.com/darkhouse_sol" target="_blank">
                 <img src="img/twitter.png" alt="X (Twitter)" class="twitter-logo">
             </a>
         </div>
@@ -132,7 +132,7 @@
                 <p class="fade-in delay-1 victory-text">But it's still watching...</p>
                 
                 <div class="share-container fade-in delay-3">
-                    <a href="https://x.com" target="_blank" class="twitter-link">
+                    <a href="https://x.com/darkhouse_sol" target="_blank" class="twitter-link">
                         <img src="img/twitter.png" alt="X (Twitter)" class="twitter-logo">
                     </a>
                 </div>
