--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Hollow Room</title>
+    <title>Alone With Them</title>
     <link rel="icon" href="favicon/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Shadows+Into+Light&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
         <div class="welcome-background"></div>
         <!-- Twitter логотип в левом углу -->
         <div class="twitter-welcome-corner">
-            <a href="https://x.com/thehollowroom" target="_blank">
+            <a href="https://x.com/alone_fear_sol" target="_blank">
                 <img src="img/twitter.png" alt="X (Twitter)" class="twitter-logo">
             </a>
         </div>
@@ -132,7 +132,7 @@
                 <p class="fade-in delay-1 victory-text">But it's still watching...</p>
                 
                 <div class="share-container fade-in delay-3">
-                    <a href="https://x.com/thehollowroom" target="_blank" class="twitter-link">
+                    <a href="https://x.com/alone_fear_sol" target="_blank" class="twitter-link">
                         <img src="img/twitter.png" alt="X (Twitter)" class="twitter-logo">
                     </a>
                 </div>
